--- a/muslimorganizer/app/src/main/res/layout-ar/fragment_praying.xml
+++ b/muslimorganizer/app/src/main/res/layout-ar/fragment_praying.xml
@@ -146,7 +146,7 @@
         android:scrollbars="vertical"
         android:orientation="vertical">
 
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="@dimen/prayer_split_h"
@@ -187,9 +187,9 @@
                 android:layout_alignParentTop="true" />
 
         </RelativeLayout>
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
 
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="@dimen/prayer_split_h"
@@ -230,9 +230,9 @@
                 android:layout_alignParentTop="true" />
 
         </RelativeLayout>
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
 
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="@dimen/prayer_split_h"
@@ -273,9 +273,9 @@
                 android:layout_alignParentTop="true" />
 
         </RelativeLayout>
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
 
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="@dimen/prayer_split_h"
@@ -316,9 +316,9 @@
                 android:layout_alignParentTop="true" />
 
         </RelativeLayout>
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
 
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="@dimen/prayer_split_h"
@@ -359,9 +359,9 @@
                 android:layout_alignParentTop="true" />
 
         </RelativeLayout>
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
 
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="@dimen/prayer_split_h"
@@ -403,7 +403,7 @@
                 android:layout_alignParentTop="true" />
 
         </RelativeLayout>
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
 
     </LinearLayout>
 
