--- a/muslimorganizer/app/src/main/res/layout-ar/row_azkar.xml
+++ b/muslimorganizer/app/src/main/res/layout-ar/row_azkar.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="@dimen/azkar"
@@ -54,6 +54,6 @@
 
     </RelativeLayout>
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
