--- a/muslimorganizer/app/src/main/res/layout-ar/row_event.xml
+++ b/muslimorganizer/app/src/main/res/layout-ar/row_event.xml
@@ -4,7 +4,7 @@
     android:layout_height="@dimen/event"
     android:orientation="vertical">
 
-    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="10dp"
@@ -81,7 +81,7 @@
 
 
         </RelativeLayout>
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 
 </LinearLayout>
