--- a/muslimorganizer/app/src/main/res/layout/activity_select_location_tabs.xml
+++ b/muslimorganizer/app/src/main/res/layout/activity_select_location_tabs.xml
@@ -9,14 +9,14 @@
     android:fitsSystemWindows="true"
     tools:context="mindtrack.muslimorganizer.ui.activity.SelectLocationTabsActivity">
 
-    <android.support.design.widget.AppBarLayout
+    <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/appbar_padding_top"
         android:theme="@style/AppTheme.AppBarOverlay">
 
-        <android.support.v7.widget.Toolbar
+        <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
@@ -47,9 +47,9 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true" />
             </RelativeLayout>
-        </android.support.v7.widget.Toolbar>
+        </androidx.appcompat.widget.Toolbar>
 
-    </android.support.design.widget.AppBarLayout>
+    </com.google.android.material.appbar.AppBarLayout>
 
 
 
@@ -64,7 +64,7 @@
         app:textColor="#FFFFFF"
         app:primaryColor="@color/colorPrimary"
         app:accentColor="@color/calendar_middle" />
-    <android.support.v4.view.ViewPager
+    <androidx.viewpager.widget.ViewPager
         android:layout_below="@+id/appbar"
         android:id="@+id/container"
         android:layout_width="match_parent"
