--- a/muslimorganizer/app/src/main/res/layout/fragment_azkar.xml
+++ b/muslimorganizer/app/src/main/res/layout/fragment_azkar.xml
@@ -6,12 +6,12 @@
     tools:context="mindtrack.muslimorganizer.ui.fragments.AzkarFragment">
 
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/AzkarList"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp">
-    </android.support.v7.widget.RecyclerView>
+    </androidx.recyclerview.widget.RecyclerView>
 
 </RelativeLayout>
