--- a/muslimorganizer/app/src/main/res/layout/fragment_azkar_view.xml
+++ b/muslimorganizer/app/src/main/res/layout/fragment_azkar_view.xml
@@ -24,7 +24,7 @@
         android:background="#BFFFFFFF"
         android:layout_weight="6">
 
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginTop="10dp"
@@ -42,7 +42,7 @@
             android:scaleType="centerInside"
             android:src="@drawable/ic_share_g" />
 
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
 
         <TextView
                 android:id="@+id/countDown"
@@ -61,7 +61,7 @@
                 android:background="@drawable/bg_circle"
                 android:text="5" />
 
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -86,7 +86,7 @@
 
 
         </RelativeLayout>
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
 
 
         </RelativeLayout>
