--- a/muslimorganizer/app/src/main/res/layout/fragment_islamic_events.xml
+++ b/muslimorganizer/app/src/main/res/layout/fragment_islamic_events.xml
@@ -5,13 +5,13 @@
     android:background="@drawable/background_port"
     tools:context="mindtrack.muslimorganizer.ui.fragments.IslamicEventsFragment">
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/events"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp">
-    </android.support.v7.widget.RecyclerView>
+    </androidx.recyclerview.widget.RecyclerView>
 
 
 </RelativeLayout>
